--- a/requirements.txt
+++ b/requirements.txt
@@ -1,57 +1,57 @@
-argon2-cffi @ file:///C:/ci/argon2-cffi_1613037959010/work
-async-generator @ file:///home/ktietz/src/ci/async_generator_1611927993394/work
-attrs @ file:///tmp/build/80754af9/attrs_1620827162558/work
-backcall @ file:///home/ktietz/src/ci/backcall_1611930011877/work
-bleach @ file:///tmp/build/80754af9/bleach_1612211392645/work
+argon2-cffi
+async-generator
+attrs
+backcall
+bleach
 certifi==2020.12.5
-cffi @ file:///C:/ci/cffi_1613247279197/work
+cffi
 click==8.0.0
-colorama @ file:///tmp/build/80754af9/colorama_1607707115595/work
-decorator @ file:///tmp/build/80754af9/decorator_1620904181799/work
-defusedxml @ file:///tmp/build/80754af9/defusedxml_1615228127516/work
+colorama
+decorator
+defusedxml
 entrypoints==0.3
 Flask==2.0.0
 gunicorn==20.1.0
-importlib-metadata @ file:///C:/ci/importlib-metadata_1617877484576/work
-ipykernel @ file:///C:/ci/ipykernel_1596190155316/work/dist/ipykernel-5.3.4-py3-none-any.whl
-ipython @ file:///C:/ci/ipython_1617121002983/work
-ipython-genutils @ file:///tmp/build/80754af9/ipython_genutils_1606773439826/work
+importlib-metadata
+ipykernel
+ipython
+ipython-genutils
 itsdangerous==2.0.0
 jedi==0.17.0
 Jinja2==3.0.0
-jsonschema @ file:///tmp/build/80754af9/jsonschema_1602607155483/work
-jupyter-client @ file:///tmp/build/80754af9/jupyter_client_1616770841739/work
-jupyter-core @ file:///C:/ci/jupyter_core_1612213356021/work
-jupyterlab-pygments @ file:///tmp/build/80754af9/jupyterlab_pygments_1601490720602/work
+jsonschema
+jupyter-client
+jupyter-core
+jupyterlab-pygments
 MarkupSafe==2.0.0
 mistune==0.8.4
-nbclient @ file:///tmp/build/80754af9/nbclient_1614364831625/work
-nbconvert @ file:///C:/ci/nbconvert_1601914925608/work
-nbformat @ file:///tmp/build/80754af9/nbformat_1617383369282/work
-nest-asyncio @ file:///tmp/build/80754af9/nest-asyncio_1613680548246/work
-notebook @ file:///C:/ci/notebook_1616443715883/work
-packaging @ file:///tmp/build/80754af9/packaging_1611952188834/work
-pandocfilters @ file:///C:/ci/pandocfilters_1605102497129/work
-parso @ file:///tmp/build/80754af9/parso_1617223946239/work
-pickleshare @ file:///tmp/build/80754af9/pickleshare_1606932040724/work
-prometheus-client @ file:///tmp/build/80754af9/prometheus_client_1618088486455/work
-prompt-toolkit @ file:///tmp/build/80754af9/prompt-toolkit_1616415428029/work
-pycparser @ file:///tmp/build/80754af9/pycparser_1594388511720/work
-Pygments @ file:///tmp/build/80754af9/pygments_1615143339740/work
-pyparsing @ file:///home/linux1/recipes/ci/pyparsing_1610983426697/work
-pyrsistent @ file:///C:/ci/pyrsistent_1600141795814/work
-python-dateutil @ file:///home/ktietz/src/ci/python-dateutil_1611928101742/work
+nbclient
+nbconvert
+nbformat
+nest-asyncio
+notebook
+packaging
+pandocfilters
+parso
+pickleshare
+prometheus-client
+prompt-toolkit
+pycparser
+Pygments
+pyparsing
+pyrsistent
+python-dateutil
 pywin32==227
 pywinpty==0.5.7
 pyzmq==20.0.0
-Send2Trash @ file:///tmp/build/80754af9/send2trash_1607525499227/work
-six @ file:///C:/ci/six_1605187374963/work
+Send2Trash
+six
 terminado==0.9.4
-testpath @ file:///home/ktietz/src/ci/testpath_1611930608132/work
-tornado @ file:///C:/ci/tornado_1606942392901/work
-traitlets @ file:///home/ktietz/src/ci/traitlets_1611929699868/work
-wcwidth @ file:///tmp/build/80754af9/wcwidth_1593447189090/work
+testpath
+tornado
+traitlets
+wcwidth
 webencodings==0.5.1
 Werkzeug==2.0.0
 wincertstore==0.2
-zipp @ file:///tmp/build/80754af9/zipp_1615904174917/work
+zipp
